# rpg

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: GameEngine.cpp  GameEngine.hpp
src/entities/: Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp
src/managers/: CollisionManager.cpp  CollisionManager.hpp
src/world/: PlatformerLevel.cpp  PlatformerLevel.hpp  Room.cpp  Room.hpp
